WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261509
REGRESSION(
267786@main
): Nullptr crash under resolveComputedStyle when there is no render tree
https://bugs.webkit.org/show_bug.cgi?id=261509
Summary
REGRESSION(267786@main): Nullptr crash under resolveComputedStyle when there ...
Antti Koivisto
Reported
2023-09-13 06:40:18 PDT
5 WebCore 0x114bd118c WebCore::Style::resolveForDocument(WebCore::Document const&) + 92 (StyleResolveForDocument.cpp:63) 6 WebCore 0x113f44a28 WebCore::Document::styleForElementIgnoringPendingStylesheets(WebCore::Element&, WebCore::RenderStyle const*, WebCore::PseudoId) + 84 (Document.cpp:2365) 7 WebCore 0x113f83e48 WebCore::Element::resolveComputedStyle(WebCore::Element::ResolveComputedStyleMode) + 900 (Element.cpp:4031) 8 WebCore 0x113f95524 WebCore::Element::computedStyle(WebCore::PseudoId) + 148 (Element.cpp:4087) 9 WebCore 0x11420c70c WebCore::HTMLTitleElement::computedTextWithDirection() + 40 (HTMLTitleElement.cpp:87)
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-09-13 06:40:34 PDT
rdar://115348354
Antti Koivisto
Comment 2
2023-09-13 06:42:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17737
EWS
Comment 3
2023-09-13 08:05:20 PDT
Committed
267952@main
(7642333842d2): <
https://commits.webkit.org/267952@main
> Reviewed commits have been landed. Closing PR #17737 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug