Cherry-pick 7642333842d2. rdar://115348354

REGRESSION(267786@main): Nullptr crash under resolveComputedStyle when there is no render tree
    https://bugs.webkit.org/show_bug.cgi?id=261509
    rdar://115348354

    Reviewed by Alan Baradlay.

    * LayoutTests/fast/css/computed-style-no-render-tree-crash-expected.txt: Added.
    * LayoutTests/fast/css/computed-style-no-render-tree-crash.html: Added.
    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::styleForElementIgnoringPendingStylesheets):

    Render tree may not be present during navigations.

    Canonical link: https://commits.webkit.org/267952@main

Identifier: 266246.1620@safari-7617-branch